#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */
typedef  struct TYPE_4__   TYPE_2__ ;
typedef  struct TYPE_3__   TYPE_1__ ;

/* Type definitions */
typedef  int /*<<< orphan*/  dev_t ;
struct TYPE_4__ {int /*<<< orphan*/  t_dev; } ;
struct TYPE_3__ {int /*<<< orphan*/  t_dev; } ;

/* Variables and functions */
 TYPE_2__* constty ; 
 TYPE_1__** km_tty ; 

__attribute__((used)) static dev_t
cndev(void)
{
	if (constty)
		return constty->t_dev;
	else
		return km_tty[0]->t_dev;
}